Attempted to fix visual quirks on mobile devices

--- a/src/timer/timer.css
+++ b/src/timer/timer.css
@@ -32,6 +32,11 @@
     min-width: 50px;
 }
 
+.timer-button{
+    color: black;
+    background-color: rgb(239, 239, 239);
+}
+
 .timer-button:hover{
     background-color: #c7c6c6;
 }
